Change at one of the bullet items at the bio text on index

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <blockquote>
                     <ul>
                         <li>"IoT não é ficção e UX terá um papel de suma importãncia neste campo".</li>
-                        <li>"Algoritmos dominarão o mundo".</li>
+                        <li>"Algoritmos dominarão o mundo e sustentarão cada vez mais modelos de negócio".</li>
                         <li>"Case seu código com design patterns e programe para os outros".</li>
                     </ul>
                 </blockquote>
