Change at navigation's abels

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="landing-nav nav navbar-nav" role="navigation">
-                            <li><a href="#about">Quem sou</a></li>
-                            <li><a href="#skills">O que sei fazer</a></li>
-                            <li><a href="#testimonials">O que falam de mim</a></li>
-                            <li><a href="#hire">Me contrate</a></li>
+                            <li><a href="#about">Sobre mim</a></li>
+                            <li><a href="#skills">Conhecimentos</a></li>
+                            <li><a href="#testimonials">Depoimentos</a></li>
+                            <li><a href="#hire">Contratar</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right" role="navigation">
                             <li><a href="portfolio.html">Portfolio</a></li>
@@ -49,7 +49,7 @@
             <section id="about" class="section container">
                 <header>
                     <hgroup>
-                        <h1>Quem sou</h1>
+                        <h1>Sobre mim</h1>
                         <h2>Sou um apaixonado por design, por ajudar pessoas e por tecnologia. Ajudo pessoas a usarem a tecnologia a seu favor de diferentes forma há seis anos.</h2>
                     </hgroup>
                 </header>
@@ -71,8 +71,8 @@
             <section id="skills" class="section container">
                 <header>
                     <hgroup>
-                        <h1>O que sei fazer</h1>
-                        <h2>Usar ferramentas e processos de design para criar produtos incríveis, botar a mão em código e modelar soluções para negócios são minhas principais skills.</h2>
+                        <h1>Conhecimentos</h1>
+                        <h2>Usar ferramentas e processos de design para criar produtos incríveis, botar a mão em código e modelar soluções para negócios são minhas principais habilidades.</h2>
                     </hgroup>
                 </header>
                 <div class="row">
@@ -105,7 +105,7 @@
             <section id="testimonials" class="section container">
                 <header>
                     <hgroup>
-                        <h1>O que falam de mim</h1>
+                        <h1>Depoimentos</h1>
                         <h2>Veja o que já disseram do meu trabalho e o que você pode esperar ao me contratar</h2>
                     </hgroup>
                 </header>
@@ -121,7 +121,7 @@
             <section id="hire" class="section container">
                 <header>
                     <hgroup>
-                        <h1>Me contrate</h1>
+                        <h1>Contratar</h1>
                         <h2>Vamos bater um papo, tomar um cafezinho e tirar seu projeto do papel :)</h2>
                     </hgroup>
                 </header>
