--- a/projects/personal-website.html
+++ b/projects/personal-website.html
@@ -40,10 +40,10 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="nav navbar-nav" role="navigation">
-                            <li><a href="../index.html#about">Quem sou</a></li>
-                            <li><a href="../index.html#skills">O que sei fazer</a></li>
-                            <li><a href="../index.html#testimonials">O que falam de mim</a></li>
-                            <li><a href="../index.html#hire">Me contrate</a></li>
+                            <li><a href="../index.html#about">Sobre mim</a></li>
+                            <li><a href="../index.html#skills">Conhecimentos</a></li>
+                            <li><a href="../index.html#testimonials">Depoimentos</a></li>
+                            <li><a href="../index.html#hire">Contratar</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right" role="navigation">
                             <li><a href="../portfolio.html">Portfolio</a></li>
