Creation of the project Santander Redesign

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <h1>Oi, eu sou o Henrique :)</h1>
                     <h2>E eu faço com que pessoas sintam paixão por usar produtos e serviços digitais</h2>
                 </hgroup>
-                <a href="portfolio.html" id="portfolio-hero-link">Veja o que já fiz</a>
-                <a href="#hire" id="cta-hire-link">Me contrate</a>
+                <a href="portfolio.html" id="portfolio-hero-link">Portfolio</a>
+                <a href="#hire" id="cta-hire-link">Contratar</a>
             </div>
         </header>
         <main role="main">
@@ -57,7 +57,7 @@
                     <img src="assets/images/profile-photo.jpg" alt="Sou o Henrique e sou um UX designer." class="img-responsive">
                 </div>
                 <p>Nasci e cresci em Taboão da Serra, município da região metropolitana de São Paulo. Tenho 24 anos, estudo UX / UI design e sou formado em Sistemas de Informação pela FIAP. Comecei a me aventurar no desenvolvimento de sistemas aos 17, programando sistemas para a web em atividades acadêmicas com tecnologias front e back end. Com 18 anos comecei a trabalhar na fábrica de software Addbiz como web designer. Cerca de um ano depois eu já estava trabalhando como desenvolvedor full stack próximo a equipe de marketing de um grande e-commerce de produtos de supermercado. Em 2013 eu comecei a trabalhar na multinacional BASF como estagiário da equipe de projetos SAP e em 2014 entrei para a Nestlé como Analista de Infraestrutura. Em 2015 passei a atuar como Gerente de Projetos e coordenador de sistemas em nuvem, posição que assumi até deixar o mercado, em dezembro de 2015.</p>
-                <p>Ao longo de minha trajetória participei de projetos envolvendo criação e design que me fizeram repensar minha carreira. Desde o início de 2016 eu venho estudando design para trabalhar mais próximo das áreas de produto de startups. Minha experiência com design vem de quando fui desenvolvedor e hoje eu me aprofundo em conceitos ligados a experiência de usuários e criação de protótipos. Sonho em juntar o que aprendi de UI/UX com o futuro da internet das coisas e fazer UX das coisas.</p>
+                <p>Ao longo de minha trajetória profissional participei de projetos envolvendo criação e design que me fizeram repensar minha carreira. Desde o início de 2016 eu venho estudando user experience para startups. Minha experiência com design vem de quando fui desenvolvedor. Por ser uma empresa pequena, acabei trabalhando também com criação de interfaces e layouts para a web. Sonho em juntar o que aprendi de UI/UX com o futuro da internet das coisas e fazer UX das coisas.</p>
                 <p>A evolução de minha carreira está pautada em três premissas, que aprendi ao longo de meus estudos:</p>
                 <blockquote>
                     <ul>
