--- a/portfolio.html
+++ b/portfolio.html
@@ -65,15 +65,15 @@
                     <div class="col-xs-12 col-sm-4 portfolio-item">
                         <a href="projects/musicar.html">
                             <img src="assets/images/product/musicar/project-thumbnail.png" alt="Miniatura do projeto Musicar" class="img-reponsive img-thumbnail">
-                            <strong>App Musicar</strong>
+                            <strong>Musicar</strong>
                         </a>
                     </div>
-                    <!-- <div class="col-xs-12 col-sm-4 portfolio-item" data-toggle="tooltip" data-placement="bottom" title="Design independente, não ligado ao Santander">
-                        <div>
+                    <div class="col-xs-12 col-sm-4 portfolio-item">
+                        <a href="projects/santander.html">
                             <img src="assets/images/product/santander_redesign/project-thumbnail.png" alt="Miniatura do projeto Redesign do app Santander" class="img-reponsive img-thumbnail">
-                            <strong>Redesign do app Santander</strong>
-                        </div>
-                    </div> -->
+                            <strong>Redesign do Santander mobile</strong>
+                        </a>
+                    </div>
                 </div>
             </section>
             <footer id="site-footer" class="section">
