--- a/projects/musicar.html
+++ b/projects/musicar.html
@@ -61,7 +61,7 @@
                         <li class="active"><span>Musicar</span></li>
                     </ol>
                     <hgroup>
-                        <h1>App Musicar</h1>
+                        <h1>Musicar</h1>
                         <h2>O que é: um aplicativo que conecta professores, alunos e escolas de música com base em sua localização.</h2>
                     </hgroup>
                 </header>
@@ -473,6 +473,7 @@
                     <div class="footer-links">
                         <a href="../index.html#hire">Me contrate</a>
                         <a href="personal-website.html">Projeto Anterior &lt;&lt;</a>
+                        <a href="santander.html">Próximo projeto &gt;&gt;</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
