Several improvements in app.css and markup changes at HTML files

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <h1>Oi, eu sou o Henrique :)</h1>
                     <h2>E eu faço com que pessoas sintam paixão por usar produtos e serviços digitais</h2>
                 </hgroup>
-                <a href="portfolio.html" id="portfolio-hero-link">Portfolio</a>
-                <a href="#hire" id="cta-hire-link">Contratar</a>
+                <a href="portfolio.html" id="portfolio-hero-link">Veja o que já fiz</a>
+                <a href="#hire" id="cta-hire-link">Me contrate</a>
             </div>
         </header>
         <main role="main">
@@ -50,10 +50,10 @@
                 <header>
                     <hgroup>
                         <h1>Sobre mim</h1>
-                        <h2>Sou um apaixonado por design, por ajudar pessoas e por tecnologia. Ajudo pessoas a usarem a tecnologia a seu favor de diferentes forma há seis anos.</h2>
+                        <h2>Sou um apaixonado por design, por ajudar pessoas e por tecnologia. Ajudo pessoas a usarem a tecnologia a seu favor de diferentes formas há seis anos.</h2>
                     </hgroup>
                 </header>
-                <div>
+                <div class="about-picture">
                     <img src="assets/images/profile-photo.jpg" alt="Sou o Henrique e sou um UX designer." class="img-responsive">
                 </div>
                 <p>Nasci e cresci em Taboão da Serra, município da região metropolitana de São Paulo. Tenho 24 anos, estudo UX / UI design e sou formado em Sistemas de Informação pela FIAP. Comecei a me aventurar no desenvolvimento de sistemas aos 17, programando sistemas para a web em atividades acadêmicas com tecnologias front e back end. Com 18 anos comecei a trabalhar na fábrica de software Addbiz como web designer. Cerca de um ano depois eu já estava trabalhando como desenvolvedor full stack próximo a equipe de marketing de um grande e-commerce de produtos de supermercado. Em 2013 eu comecei a trabalhar na multinacional BASF como estagiário da equipe de projetos SAP e em 2014 entrei para a Nestlé como Analista de Infraestrutura. Em 2015 passei a atuar como Gerente de Projetos e coordenador de sistemas em nuvem, posição que assumi até deixar o mercado, em dezembro de 2015.</p>
@@ -63,7 +63,7 @@
                     <ul>
                         <li>"IoT não é ficção e UX terá um papel de suma importãncia neste campo".</li>
                         <li>"Algoritmos dominarão o mundo e sustentarão cada vez mais modelos de negócio".</li>
-                        <li>"Case seu código com design patterns e programe para os outros".</li>
+                        <li>"Saber codar é meio caminho andado, o restante é design patterns e programação para o próximo".</li>
                     </ul>
                 </blockquote>
                 <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">Veja meu currículo (formato PDF)</a>
@@ -77,28 +77,40 @@
                 </header>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
-                        <dl>
-                            <dt>UX Design</dt>
-                            <dd>* * * *</dd>
-                            <dt>UI Design</dt>
-                            <dd>* * * * *</dd>
-                            <dt>Design Thinking</dt>
-                            <dd>* * *</dd>
-                            <dt>InVision</dt>
-                            <dd>* * * *</dd>
-                        </dl>
+                        <div class="skill-item">
+                            <strong>UX Design</strong>
+                            <span class="pull-right">* * * *</span>
+                        </div>
+                        <div class="skill-item">
+                            <strong>UI Design</strong>
+                            <span class="pull-right">* * *</span>
+                        </div>
+                        <div class="skill-item">
+                            <strong>Rapid Prototyping</strong>
+                            <span class="pull-right">* * * * *</span>
+                        </div>
+                        <div class="skill-item">
+                            <strong>Design Thinking</strong>
+                            <span class="pull-right">* * *</span>
+                        </div>
                     </div>
                     <div class="col-xs-12 col-sm-6">
-                        <dl>
-                            <dt>Pacote Adobe</dt>
-                            <dd>* * * *</dd>
-                            <dt>Balsamiq</dt>
-                            <dd>* * * * *</dd>
-                            <dt>Front end coding</dt>
-                            <dd>* * * * *</dd>
-                            <dt>Programming</dt>
-                            <dd>* * * *</dd>
-                        </dl>
+                        <div class="skill-item">
+                            <strong>Adobe CC</strong>
+                            <span class="pull-right">* * * *</span>
+                        </div>
+                        <div class="skill-item">
+                            <strong>Data Informed Design</strong>
+                            <span class="pull-right">* * *</span>
+                        </div>
+                        <div class="skill-item">
+                            <strong>Front end</strong>
+                            <span class="pull-right">* * * * *</span>
+                        </div>
+                        <div class="skill-item">
+                            <strong>Programming</strong>
+                            <span class="pull-right">* * * *</span>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -125,31 +137,27 @@
                         <h2>Vamos bater um papo, tomar um cafezinho e tirar seu projeto do papel :)</h2>
                     </hgroup>
                 </header>
-                <ul>
-                    <li>
-                        <a href="mailto:henrique@henriquefreitas.com.br">
-                            <img src="assets/images/email-icon.png" alt="Mande um e-mail para henrique@henriquefreitas.com.br" class="img-responsive">
-                            <span>henrique@henriquefreitas.com.br</span>
-                        </a>
-                    </li>
-                    <li>
-                        
-                            <img src="assets/images/phone-icon.png" alt="Mande um oi no WhatsApp em (011) 95435-5406" class="img-responsive">
-                            <span>(011) 95435-5406 (zap zap)</span>
-                        
-                    </li>
-                    <li>
-                        <a href="https://linkedin.com/in/henriquefreitassouza" target="_blank">
-                            <img src="assets/images/linkedin-icon.png" alt="Mande um oi no LinkedIn em https://linkedin.com/in/henriquefreitassouza" class="img-responsive">
-                            <span>henriquefreitassouza</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://behance.net/henrique034b" target="_blank">
-                            <img src="assets/images/behance-icon.png" alt="Veja meus trabalhos com criação de interfaces e ilustrações em https://behance.net/henrique034b" class="img-responsive"><span>henrique034b</span>
-                        </a>
-                    </li>
-                </ul>
+                <div class="contact-channel">
+                    <a href="mailto:henrique@henriquefreitas.com.br">
+                        <img src="assets/images/email-icon.png" alt="Mande um e-mail para henrique@henriquefreitas.com.br" class="img-responsive">
+                        <span>henrique@henriquefreitas.com.br</span>
+                    </a>
+                </div>
+                <div class="contact-channel">
+                    <img src="assets/images/phone-icon.png" alt="Mande um oi no WhatsApp em (011) 95435-5406" class="img-responsive">
+                    <span>(011) 95435-5406 (zap zap)</span>
+                </div>
+                <div class="contact-channel">
+                    <a href="https://linkedin.com/in/henriquefreitassouza" target="_blank">
+                        <img src="assets/images/linkedin-icon.png" alt="Mande um oi no LinkedIn em https://linkedin.com/in/henriquefreitassouza" class="img-responsive">
+                        <span>henriquefreitassouza</span>
+                    </a>
+                </div>
+                <div class="contact-channel">
+                    <a href="https://behance.net/henrique034b" target="_blank">
+                        <img src="assets/images/behance-icon.png" alt="Veja meus trabalhos com criação de interfaces e ilustrações em https://behance.net/henrique034b" class="img-responsive"><span>henrique034b</span>
+                    </a>
+                </div>
             </section>
             <footer id="site-footer" class="section">
                 <div class="container">
