--- a/projects/santander.html
+++ b/projects/santander.html
@@ -62,10 +62,10 @@
                     </ol>
                     <hgroup>
                         <h1>Santander Mobile Redesign</h1>
-                        <h2>O que é: uma sujestão de redesign para o aplicativo mobile do banco Santander.</h2>
+                        <h2>O que é: uma sujestão de redesign do processo de pagamento de boletos para o aplicativo mobile do banco Santander.</h2>
                     </hgroup>
                 </header>
-                <p class="portfolio-item-description">Este trabalho é resultado de semanas de estudo usando o aplicativo Santander e observando pessoas que também o usam. O objetivo do projeto é simplificar para o usuário o processo de pagamento de uma nova conta pelo smartphone. O redesign é uma iniciativa própria, não tendo relação com o banco Santander. As principais mudanças foram a remoção do cartão de segurança, seguindo a linha dos bancos digitais, e a simplificação do preenchimento dos dados do boleto.</p>
+                <p class="portfolio-item-description">Este trabalho é resultado de semanas de estudo usando o aplicativo Santander e observando pessoas que também o usam. O objetivo do projeto é simplificar para o usuário o processo de pagamento de uma nova conta pelo smartphone. O redesign é uma iniciativa própria, não tendo relação com o banco Santander. As principais mudanças foram a remoção do cartão de segurança, seguindo a linha dos bancos digitais, e a simplificação do preenchimento dos dados do boleto. A interface foi redesenhada com os objetivos de distribuir a informação de maneira que faça mais sentido para os usuários e diminuir o número de passos para realizar a transação.</p>
                 
                 <h3>Principais wireframes</h3>
                 <div class="row">
