--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <span>henrique@henriquefreitas.com.br</span>
                     </a>
                 </div>
-                <div class="contact-channel">
+                <div class="contact-channel no-hover">
                     <img src="assets/images/phone-icon.png" alt="Mande um oi no WhatsApp em (011) 95435-5406" class="img-responsive">
                     <span>(011) 95435-5406 (zap zap)</span>
                 </div>
