Change at skills section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="skill-item">
                             <strong>Programming</strong>
-                            <span class="pull-right">* * * *</span>
+                            <span class="pull-right">* * *</span>
                         </div>
                     </div>
                 </div>
