Skill data informed design change

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <span class="pull-right">* * * *</span>
                         </div>
                         <div class="skill-item">
-                            <strong>Data Informed Design</strong>
+                            <strong>Agile Methodologies</strong>
                             <span class="pull-right">* * *</span>
                         </div>
                         <div class="skill-item">
