Changes on the hero and about sections. Improvements on the css file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h1>Oi, eu sou o Henrique :)</h1>
                     <h2>E eu faço com que pessoas sintam paixão por usar produtos e serviços digitais</h2>
                 </hgroup>
-                <a href="portfolio.html" id="portfolio-hero-link">Veja o que já fiz</a>
+                <a href="portfolio.html" id="portfolio-hero-link">Veja meu portfolio</a>
                 <a href="#hire" id="cta-hire-link">Me contrate</a>
             </div>
         </header>
@@ -61,9 +61,9 @@
                 <p>A evolução de minha carreira está pautada em três premissas, que aprendi ao longo de meus estudos:</p>
                 <blockquote>
                     <ul>
-                        <li>"IoT não é ficção e UX terá um papel de suma importãncia neste campo".</li>
-                        <li>"Algoritmos dominarão o mundo e sustentarão cada vez mais modelos de negócio".</li>
-                        <li>"Saber codar é meio caminho andado, o restante é design patterns e programação para o próximo".</li>
+                        <li>IoT não é ficção e UX terá um papel de suma importância neste campo.</li>
+                        <li>Algoritmos dominarão o mundo e sustentarão cada vez mais modelos de negócio.</li>
+                        <li>Saber codar é meio caminho andado, o restante é design patterns e programação para o próximo.</li>
                     </ul>
                 </blockquote>
                 <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">Veja meu currículo (formato PDF)</a>
@@ -161,7 +161,7 @@
             </section>
             <footer id="site-footer" class="section">
                 <div class="container">
-                    <strong>Henrique Freitas</strong>
+                    <strong><a href="index.html" title="Voltar para o topo da página">Henrique Freitas</a></strong>
                     <div class="footer-links">
                         <a href="#page-header" id="go-to-the-top">Voltar ao topo</a>
                     </div>
