Minor improvements on portfolio and portfolio items files. Additional Behance link on portfolio. Minor improvements on app.css and app.js

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <header>
                     <hgroup>
                         <h1>Conhecimentos</h1>
-                        <h2>Usar ferramentas e processos de design para criar produtos incríveis, botar a mão em código e modelar soluções para negócios são minhas principais habilidades.</h2>
+                        <h2>Usar ferramentas e processos de design, botar a mão em código e prototipar soluções para negócios são minhas principais habilidades.</h2>
                     </hgroup>
                 </header>
                 <div class="row">
@@ -96,12 +96,12 @@
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="skill-item">
-                            <strong>Adobe CC</strong>
-                            <span class="pull-right">* * * *</span>
-                        </div>
-                        <div class="skill-item">
                             <strong>Agile Methodologies</strong>
                             <span class="pull-right">* * *</span>
+                        </div>
+                        <div class="skill-item">
+                            <strong>Adobe CC</strong>
+                            <span class="pull-right">* * * *</span>
                         </div>
                         <div class="skill-item">
                             <strong>Front end</strong>
