--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
             <div id="hero" role="banner">
                 <hgroup>
                     <h1>Meu portfolio</h1>
-                    <h2>É aqui que eu guardo os registros das minhas criações</h2>
+                    <h2>Conheça alguns de meus trabalhos com UX e UI</h2>
                 </hgroup>
             </div>
         </header>
@@ -75,6 +75,7 @@
                         </a>
                     </div>
                 </div>
+                <a href="https://behance.net/henrique034b" target="_blank">Quer ver mais? Dá uma espiada nos meus trabalhos com design gráfico lá no Behance (e um appreciation joinha também :D)</a>
             </section>
             <footer id="site-footer" class="section">
                 <div class="container">
