--- a/projects/personal-website.html
+++ b/projects/personal-website.html
@@ -62,7 +62,7 @@
                     </ol>
                     <hgroup>
                         <h1>Meu portfolio</h1>
-                        <h2>O que é: um site para que recrutadores de RH possam facilmente escanear informações sobre meus trabalhos realizados e minhas habilidades como UX designer.</h2>
+                        <h2>O que é: um portfolio de trabalhos com UX/UI Design.</h2>
                     </hgroup>
                 </header>
                 <p class="portfolio-item-description">Meu portfolio foi construído para atender as necessidades de gerentes de RH e de departamentos de design, que precisam avaliar o conhecimento dos candidatos a vagas que eles tentam preencher. As informações do site foram dispostas de forma que os recrutadores encontrem primeiro meu portfolio e depois minhas informações pessoais. Esta organização tem como intuito complementar o conteúdo no LinkedIn, canal por onde os recrutadores passam antes de chegarem até o site do portfolio.</p>
