--- a/projects/santander.html
+++ b/projects/santander.html
@@ -67,6 +67,33 @@
                 </header>
                 <p class="portfolio-item-description">Este trabalho é resultado de semanas de estudo usando o aplicativo Santander e observando pessoas que também o usam. O objetivo do projeto é simplificar para o usuário o processo de pagamento de uma nova conta pelo smartphone. O redesign é uma iniciativa própria, não tendo relação com o banco Santander. As principais mudanças foram a remoção do cartão de segurança, seguindo a linha dos bancos digitais, e a simplificação do preenchimento dos dados do boleto. A interface foi redesenhada com os objetivos de distribuir a informação de maneira que faça mais sentido para os usuários e diminuir o número de passos para realizar a transação.</p>
                 
+                <h3>Principais mockups</h3>
+                <div class="row">
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/login_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/login_ios.png" alt="Santander mobile redesign - CPF - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>CPF - IOS App</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/senha_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/senha_ios.png" alt="Santander mobile redesign - Senha - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Senha - IOS App</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/tela_principal_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/tela_principal_ios.png" alt="Santander mobile redesign - Tela principal - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Tela principal - IOS App</strong>
+                        </a>
+                    </div>
+                </div>
                 <h3>Principais wireframes</h3>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
