Minor improvements on app.css; New files for Santander Redesign added; Achievments and links to more information added on project descriptions.

--- a/projects/musicar.html
+++ b/projects/musicar.html
@@ -66,6 +66,15 @@
                     </hgroup>
                 </header>
                 <p class="portfolio-item-description">O Musicar é um aplicativo que tem como missão facilitar o encontro entre quem ensina e quem quer aprender música e é o meu primeiro trabalho com UX. O aplicativo está sendo desenvolvido em parceria com uma multinacional do setor musical. Para validar a solução, foram criados um protótipo de baixa fidelidade e uma landing page de pré cadastro. O protótipo foi exibido em eventos com personas e a landing page foi apresentada na Expo Music 2016.</p>
+                <div class="alert alert-success">
+                    <strong>Conquistas: </strong>
+                    <ul>
+                        <li>Entendimento das características e necessidades do cliente;</li>
+                    </ul>
+                </div>
+                <div class="alert alert-info">
+                    <strong>Design de interação: </strong><a href="https://invis.io/QP8KSQB5G" target="_blank">https://invis.io/QP8KSQB5G</a>
+                </div>
                 <h3>Principais mockups</h3>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
