--- a/projects/personal-website.html
+++ b/projects/personal-website.html
@@ -66,6 +66,12 @@
                     </hgroup>
                 </header>
                 <p class="portfolio-item-description">Meu portfolio foi construído para atender as necessidades de gerentes de RH e de departamentos de design, que precisam avaliar o conhecimento dos candidatos a vagas que eles tentam preencher. As informações do site foram dispostas de forma que os recrutadores encontrem primeiro meu portfolio e depois minhas informações pessoais. Esta organização tem como intuito complementar o conteúdo no LinkedIn, canal por onde os recrutadores passam antes de chegarem até o site do portfolio.</p>
+                <div class="alert alert-success">
+                    <strong>Conquistas: </strong>
+                    <ul>
+                        <li>Ganho de produtividade para recrutadores;</li>
+                    </ul>
+                </div>
                 <h3>Principais mockups</h3>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
