--- a/projects/santander.html
+++ b/projects/santander.html
@@ -65,8 +65,13 @@
                         <h2>O que é: uma sujestão de redesign do processo de pagamento de boletos para o aplicativo mobile do banco Santander.</h2>
                     </hgroup>
                 </header>
-                <p class="portfolio-item-description">Este trabalho é resultado de semanas de estudo usando o aplicativo Santander e observando pessoas que também o usam. O objetivo do projeto é simplificar para o usuário o processo de pagamento de uma nova conta pelo smartphone. O redesign é uma iniciativa própria, não tendo relação com o banco Santander. As principais mudanças foram a remoção do cartão de segurança, seguindo a linha dos bancos digitais, e a simplificação do preenchimento dos dados do boleto. A interface foi redesenhada com os objetivos de distribuir a informação de maneira que faça mais sentido para os usuários e diminuir o número de passos para realizar a transação.</p>
-                
+                <p class="portfolio-item-description">Este trabalho é resultado de semanas de estudo usando o aplicativo Santander e observando pessoas que também o usam. O objetivo do projeto é simplificar para o usuário o processo de pagamento de uma nova conta pelo smartphone. O redesign é uma iniciativa própria, não tendo relação com o banco Santander. As principais mudanças foram a remoção do cartão de segurança, seguindo a linha dos bancos digitais, e a simplificação do formulário de preenchimento dos dados do boleto. A interface foi redesenhada com o objetivo de distribuir a informação de forma a evidenciar etapas de um processo. O visual segue uma estética alinhada aos padrões de interface da Apple e do Google, que contém elementos de navegação e interação já conhecidos pelos usuários.</p>
+                <div class="alert alert-success">
+                    <strong>Conquistas: </strong>
+                    <ul>
+                        <li>Ganho de produtividade para realizar a operação;</li>
+                    </ul>
+                </div>
                 <h3>Principais mockups</h3>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -74,7 +79,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/mockup/thumbnail/login_ios.png" alt="Santander mobile redesign - CPF - IOS" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>CPF - IOS App</strong>
+                            <strong>CPF - IOS</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -82,7 +87,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/mockup/thumbnail/senha_ios.png" alt="Santander mobile redesign - Senha - IOS" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Senha - IOS App</strong>
+                            <strong>Senha - IOS</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -90,7 +95,55 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/mockup/thumbnail/tela_principal_ios.png" alt="Santander mobile redesign - Tela principal - IOS" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Tela principal - IOS App</strong>
+                            <strong>Tela principal - IOS</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/pagar_conta_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/pagar_conta_ios.png" alt="Santander mobile redesign - Pagar Conta - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Código de barras - IOS</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/codigo_de_barras_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/codigo_de_barras_ios.png" alt="Santander mobile redesign - Escanear código - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Escanear código - IOS</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/dados_do_boleto_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/dados_do_boleto_ios.png" alt="Santander mobile redesign - Dados do boleto - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Dados do pagamento - IOS</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/confirmar_senha_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/confirmar_senha_ios.png" alt="Santander mobile redesign - Confirmar senha - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Confirmar senha - IOS</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/pagamento_realizado_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/pagamento_realizado_ios.png" alt="Santander mobile redesign - Pagamento confirmado - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Pagamento confirmado - IOS</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/email_enviado_ios.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/mockup/thumbnail/email_enviado_ios.png" alt="Santander mobile redesign - E-mail enviado - IOS" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>E-mail enviado - IOS</strong>
                         </a>
                     </div>
                 </div>
@@ -101,7 +154,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/wireframe/thumbnail/initial_screen.png" alt="Santander mobile redesign - CPF" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Login - CPF</strong>
+                            <strong>CPF</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -109,7 +162,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/wireframe/thumbnail/password.png" alt="Santander mobile redesign - Senha" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Login - Senha</strong>
+                            <strong>Senha</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -135,7 +188,15 @@
                             </div>
                             <strong>Dados do pagamento</strong>
                         </a>
-                    </div> 
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/wireframe/confirm_password.png">
+                            <div>
+                                <img src="../assets/images/product/santander_redesign/wireframe/thumbnail/confirm_password.png" alt="Santander mobile redesign - Confirmar senha" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Confirmar senha</strong>
+                        </a>
+                    </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/wireframe/payment_confirmed.png">
                             <div>
